--- a/core-metamodel/package.json
+++ b/core-metamodel/package.json
@@ -11,6 +11,7 @@
     "@dbos-inc/dbos-cloud": "^1.3.13",
     "@dbos-inc/eslint-plugin": "^0.0.6",
     "@types/jest": "^29.5.5",
+    "@types/mock-knex": "^0.4.8",
     "@types/supertest": "^2.0.14",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
@@ -20,6 +21,8 @@
   },
   "dependencies": {
     "@dbos-inc/dbos-sdk": "^1.3.13",
-    "knex": "3.1.0"
+    "jest-mock-knex": "^1.18.0",
+    "knex": "3.1.0",
+    "mock-knex": "^0.4.13"
   }
 }
