--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -19,4 +19,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: cor-metamodel/
+          projectBaseDir: core-metamodel/
