--- a/core-metamodel/sonar-project.properties
+++ b/core-metamodel/sonar-project.properties
@@ -6,9 +6,11 @@ sonar.projectName=digital-twin
 sonar.projectVersion=0.0.1
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=src/**
-sonar.exclusions=**/*.test.ts
-sonar.tests=src/*.test.ts
+sonar.sources=src
+sonar.tests=src
+
+sonar.exclusions=*.test.ts
+sonar.test.inclusions=*.test.ts
 
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
