--- a/core-metamodel/sonar-project.properties
+++ b/core-metamodel/sonar-project.properties
@@ -9,8 +9,7 @@ sonar.projectVersion=0.0.1
 sonar.sources=src
 sonar.tests=src
 
-sonar.exclusions=*.test.ts
-sonar.test.inclusions=*.test.ts
+sonar.test.inclusions=**/*.test.ts
 
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
