--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -17,10 +17,18 @@ jobs:
         run: cd core-metamodel && npm install && npm run build
       - name: Test
         run: cd core-metamodel && npm run test
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          projectBaseDir: core-metamodel/
+      - name: Install Sonar Scanner
+        run: |
+          npm install -g sonarqube-scanner
+      - name: Manually run sonar scanner
+        run: |
+          cd core-metamodel
+          sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
+#      - name: SonarCloud Scan
+#        uses: SonarSource/sonarcloud-github-action@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#        with:
+#          projectBaseDir: core-metamodel/
