--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -9,21 +9,28 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
+    container:
+      image: postgres:latest
+      env:
+        PGPASSWORD: D3lri0us
+        POSTGRES_PASSWORD: D3lri0us
+      ports:
+        - 5432
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Install dependencies
         run: cd core-metamodel && npm install && npm run build
-#      - name: Test
-#        run: cd core-metamodel && npm run test
-      - name: Install Sonar Scanner
-        run: |
-          npm install -g sonarqube-scanner
-      - name: Manually run sonar scanner
-        run: |
-          cd core-metamodel
-          sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      - name: Test
+        run: cd core-metamodel && PGPASSWORD=D3lri0us npm run test
+#      - name: Install Sonar Scanner
+#        run: |
+#          npm install -g sonarqube-scanner
+#      - name: Manually run sonar scanner
+#        run: |
+#          cd core-metamodel
+#          sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
 #      - name: SonarCloud Scan
 #        uses: SonarSource/sonarcloud-github-action@master
