--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -20,25 +20,23 @@ jobs:
       - name: Setup Postgres
         run: |
           cd core-metamodel && PGPASSWORD=D3lri0us && node start_postgres_docker.js
-          npm install -g db-migrate
           npm install
           npx dbos migrate
       - name: Install dependencies
         run: |
           cd core-metamodel
-          npm install
           npm run build
       - name: Test
         run: |
           cd core-metamodel
           npm run test
-#      - name: Install Sonar Scanner
-#        run: |
-#          npm install -g sonarqube-scanner
-#      - name: Manually run sonar scanner
-#        run: |
-#          cd core-metamodel
-#          sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      - name: Install Sonar Scanner
+        run: |
+          npm install -g sonarqube-scanner
+      - name: Manually run sonar scanner
+        run: |
+          cd core-metamodel
+          sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
 #      - name: SonarCloud Scan
 #        uses: SonarSource/sonarcloud-github-action@master
