--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -11,15 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      PGPASSWORD: D3lri0us
-
+      PGPASSWORD: ${{ secrets.PGPASSWORD }}
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Setup Postgres
         run: |
-          cd core-metamodel && PGPASSWORD=D3lri0us && node start_postgres_docker.js
+          cd core-metamodel && node start_postgres_docker.js
           npm install
           npx dbos migrate
       - name: Install dependencies
@@ -37,11 +36,3 @@ jobs:
         run: |
           cd core-metamodel
           sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-
-#      - name: SonarCloud Scan
-#        uses: SonarSource/sonarcloud-github-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#        with:
-#          projectBaseDir: core-metamodel/
