--- a/core-metamodel/package.json
+++ b/core-metamodel/package.json
@@ -21,8 +21,6 @@
   },
   "dependencies": {
     "@dbos-inc/dbos-sdk": "^1.3.13",
-    "jest-mock-knex": "^1.18.0",
-    "knex": "3.1.0",
-    "mock-knex": "^0.4.13"
+    "knex": "3.1.0"
   }
 }
