--- a/core-metamodel/package.json
+++ b/core-metamodel/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "build": "tsc",
-    "test": "npx knex migrate:rollback && npx knex migrate:up && jest --coverage --verbose",
+    "test": "npx knex migrate:rollback && npx knex migrate:up && jest --coverage --verbose --runInBand",
     "lint": "eslint src",
     "lint-fix": "eslint --fix src"
   },
@@ -16,7 +16,7 @@
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
