--- a/core-metamodel/dbos-config.yaml
+++ b/core-metamodel/dbos-config.yaml
@@ -10,3 +10,10 @@ database:
     - npx knex migrate:latest
   rollback:
     - npx knex migrate:rollback
+application:
+  # Local defaults
+  payment_host: 'http://localhost:8086'
+  local_host: 'http://localhost:8082'
+  # cloud example
+  # payment_host: 'https://<username>-payment-backend.cloud.dbos.dev'
+  # local_host: 'https://<username>-shop-backend.cloud.dbos.dev'
