--- a/frontend-metamodel/package.json
+++ b/frontend-metamodel/package.json
@@ -22,21 +22,14 @@
     "ci-checks": "npm run type-check && npm run lint && npm run test:coverage",
     "build:bundle-profile": "webpack --config webpack.prod.js --profile --json > stats.json",
     "bundle-profile:analyze": "npm run build:bundle-profile && webpack-bundle-analyzer ./stats.json",
-    "clean": "rimraf dist",
-    "storybook": "start-storybook -p 6006",
-    "build:storybook": "build-storybook"
+    "clean": "rimraf dist"
   },
   "devDependencies": {
     "@redhat-cloud-services/eslint-config-redhat-cloud-services": "^1.3.0",
-    "@storybook/addon-actions": "^7.0.27",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-knobs": "^7.0.2",
-    "@storybook/addon-links": "^7.0.27",
-    "@storybook/addons": "^7.0.27",
-    "@storybook/react": "^7.0.27",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/gatsbyjs__reach-router": "^2.0.4",
     "@types/jest": "^29.5.3",
     "@types/react-router-dom": "^5.3.3",
     "@types/victory": "^33.1.5",
@@ -79,10 +72,10 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
+    "@gatsbyjs/reach-router": "^2.0.1",
     "@patternfly/react-core": "^5.2.0",
     "@patternfly/react-icons": "^5.1.1",
     "@patternfly/react-styles": "^5.1.1",
-    "@storybook/builder-webpack5": "^7.5.3",
     "react": "^18",
     "react-dom": "^18",
     "sirv-cli": "^2.0.2"
