--- a/.github/workflows/sonar_frontend.yml
+++ b/.github/workflows/sonar_frontend.yml
@@ -1,8 +1,6 @@
-name: SonarCloud CI Core Metamodel
+name: SonarCloud CI Frontend Metamodel
 on:
   push:
-    branches:
-      - main
     paths:
       - 'frontend-metamodel/**'
   pull_request:
