--- a/.github/workflows/sonar_frontend.yml
+++ b/.github/workflows/sonar_frontend.yml
@@ -19,6 +19,7 @@ jobs:
           npm install
       - name: Build
         run: |
+          cd frontend-metamodel
           npm run build
 #      - name: Test
 #        run: |
