--- a/frontend-metamodel/sonar-project.properties
+++ b/frontend-metamodel/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=0.0.1
 sonar.sources=src
 sonar.tests=src
 
-sonar.test.inclusions=**/*.test.ts
+sonar.test.inclusions=**/*.test.tsx
 
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
