testing sonar updates

--- a/.github/workflows/sonar_core.yml
+++ b/.github/workflows/sonar_core.yml
@@ -1,6 +1,8 @@
 name: SonarCloud CI Core Metamodel
 on:
   push:
+    paths:
+      - 'core-metamodel/**'
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
