--- a/.github/workflows/sonar_frontend.yml
+++ b/.github/workflows/sonar_frontend.yml
@@ -1,6 +1,8 @@
 name: SonarCloud CI Frontend Metamodel
 on:
   push:
+    paths:
+      - 'frontend-metamodel/**'
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
