--- a/frontend-metamodel/package.json
+++ b/frontend-metamodel/package.json
@@ -59,7 +59,7 @@
     "style-loader": "^3.3.3",
     "svg-url-loader": "^8.0.0",
     "terser-webpack-plugin": "^5.3.9",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.4.4",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tslib": "^2.6.0",
@@ -78,6 +78,7 @@
     "@patternfly/react-styles": "^5.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "sirv-cli": "^2.0.2"
+    "sirv-cli": "^2.0.2",
+    "ts-node": "^10.9.2"
   }
 }
