--- a/.github/workflows/sonar_frontend.yml
+++ b/.github/workflows/sonar_frontend.yml
@@ -23,10 +23,10 @@ jobs:
         run: |
           cd frontend-metamodel
           npm run build
-#      - name: Test
-#        run: |
-#          cd frontend-metamodel
-#          npm run test
+      - name: Test
+        run: |
+          cd frontend-metamodel
+          npm run test
       - name: Install Sonar Scanner
         run: |
           npm install -g sonarqube-scanner
