--- a/.github/workflows/sonar_core.yml
+++ b/.github/workflows/sonar_core.yml
@@ -16,10 +16,22 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: core-metamodel/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-1234
+      - name: Setup Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          cd core-metamodel
+          npm ci
       - name: Setup Postgres
         run: |
           cd core-metamodel && node start_postgres_docker.js
-          npm install
           npx dbos migrate
       - name: Install dependencies
         run: |
