--- a/core-metamodel/package.json
+++ b/core-metamodel/package.json
@@ -10,7 +10,9 @@
   "devDependencies": {
     "@dbos-inc/dbos-cloud": "^1.5.12",
     "@dbos-inc/eslint-plugin": "^0.0.6",
+    "@types/imap": "^0.8.40",
     "@types/jest": "^29.5.5",
+    "@types/mailparser": "^3.4.4",
     "@types/mock-knex": "^0.4.8",
     "@types/supertest": "^2.0.14",
     "eslint": "^8.57.0",
@@ -22,6 +24,8 @@
   "dependencies": {
     "@dbos-inc/dbos-sdk": "^1.3.13",
     "axios": "^1.6.8",
-    "knex": "3.1.0"
+    "imap": "^0.8.19",
+    "knex": "3.1.0",
+    "mailparser": "^3.7.1"
   }
 }
